--- a/main.html
+++ b/main.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<!-- To DO: Aufbau der Main-Datei voranbringen 
-
-Datum: 22.11.2024, Version 1
--->
+<html lang="de">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mein Portfolio</title>
+  </head>
+  <body>
+    <p>Test</p>
+  </body>
+</html>
